tests/nosurveyhanging.out
./nosurveyhanging.svx:6: info: Survey has no fixed points. Therefore I've fixed test.2 at (0,0,0)

Removing trailing traverses...

Concatenating traverses...

Simplifying network...
cavern: error: Survey not all connected to fixed stations
The following survey stations are not attached to a fixed point:
./nosurveyhanging.svx:6: info: test.1
